# libmem

./: Makefile.am  configure.ac  mem.c  mem.h  test.c
