AM_CFLAGS = \
	-Wall \
	-Wextra \
	-Werror \
	-Wstrict-aliasing \
	-Wchar-subscripts \
	-Wformat-security \
	-Wmissing-declarations \
	-Wmissing-prototypes \
	-Wnested-externs \
	-Wpointer-arith \
	-Wshadow \
	-Wsign-compare \
	-Wstrict-prototypes \
	-Wtype-limits \
	-Wno-missing-field-initializers \
	-Wno-unused-parameter

include_HEADERS = mem.h
lib_LTLIBRARIES = libmem.la
libmem_la_SOURCES = mem.c
